public/css/main.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

caption, th, td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}

q, blockquote {
  quotes: none;
}
q:before, q:after, blockquote:before, blockquote:after {
  content: "";
  content: none;
}

a img {
  border: none;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
  display: block;
}

.sans-serif, body {
  font-family: "Overlock";
  font-weight: 400;
}

.title, h1, h2, h3, h4 {
  color: #3c3c3c;
  text-shadow: 0 1px 0 #fcfcfc;
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: 400;
}

.group, h1, h2, h3, h4, .module, .module div, #wrap nav, #wrap .header {
  *zoom: 1;
}
.group:after, h1:after, h2:after, h3:after, h4:after, .module:after, .module div:after, #wrap nav:after, #wrap .header:after {
  content: "";
  display: table;
  clear: both;
}

.displace, #wrap h1 a {
  display: block;
}

.middle, #wrap, #wrap .content .login, #wrap .content .register, #wrap form input[type="submit"], #wrap form button {
  margin: 0 auto;
}

.padding, .module div, #wrap .footer p, #wrap form input[type="text"], #wrap form input[type="password"], #wrap form input[type="email"], #wrap form input[type="submit"], #wrap form button {
  padding: 7px 14px;
}

.padding-y, #wrap h1, #wrap nav, #wrap .content {
  padding: 7px 0;
}

.padding-x, .module div.module-footer a {
  padding: 0 14px;
}

.margin, #wrap .content .login h2, #wrap .content .register h2, #wrap form .error {
  margin: 7px 14px;
}

.margin-y, #wrap .pin {
  margin: 7px 0;
}

.margin-x, #wrap h1 a {
  margin: 0 14px;
}

.alignLeft, #wrap h1, #wrap nav {
  float: left;
}

.alignRight {
  float: right;
}

.small, .module div.module-footer, #wrap .footer p, #wrap form input[type="submit"], #wrap form button {
  font-size: 12px;
}

.medium, .module, #wrap form .error, #wrap form input[type="text"], #wrap form input[type="password"], #wrap form input[type="email"] {
  font-size: 15px;
}

.large, .title, h1, h2, h3, h4, #wrap .pin .title, #wrap .pin h1, #wrap .pin h2, #wrap .pin h3, #wrap .pin h4 {
  font-size: 21px;
}

.module {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -o-border-radius: 4px;
  -ms-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
  -moz-box-shadow: 0 2px 2px #e3e3e3;
  -webkit-box-shadow: 0 2px 2px #e3e3e3;
  -o-box-shadow: 0 2px 2px #e3e3e3;
  box-shadow: 0 2px 2px #e3e3e3;
  background-color: #fcfcfc;
}
.module div:first-child {
  background-color: #f7f7f7;
}
.module .module-footer div:first-child {background:#fcfcfc}
.tags .module div:first-child {
  background-color: #f7f7f7;
}
.module-footer .info{float:left;}
.module-footer .info div{padding:0 0 2px 0;}
.module-footer .controls{float:right;}
.controls .delete{
  background-image:url(/images/pinned.icon.trash.png);
  background-repeat: no-repeat;
  background-position:0 4px;
  padding-left: 18px
}
.controls .tags{
  background-image:url(/images/pinned.icon.tag.png);
  background-repeat: no-repeat;
  background-position:0 3px;
  padding-left: 18px
}
.module div.module-footer {
  color: #999999;
  overflow:hidden;
}
.module div.module-footer border {
  top: 1px solid #f7f7f7;
}
.module div.module-footer a {
  color: #999999;
  display: block;
  /*background-image: url("/images/pinned.icon.link.png");*/
  /*background-repeat: no-repeat;*/
  /*background-position: 0 0;*/
}
.module div.module-footer a:hover {
  color: #0073cc;
}

a {
  color: #0090ff;
  text-decoration: none;
}
a:hover {
  color: #0073cc;
}

body {
  background-color: #ededed;
  background-image: url("/images/pinned.bg.png");
}

#wrap {
  width: 960px;
}
#wrap h1 {
  width: 480px;
  background: url("/images/pinned.logo.png") no-repeat 10px 10px;
}
#wrap h1 a {
  width: 64px;
  height: 68px;
  margin-left: 93px;
  font-size: 2.5em;
  padding-top:4px;
}
#wrap .nav {
  display: block;
  float:right;
  padding-right: 15px;
  margin-top: 28px;
}
#wrap .nav li:before {
  content: "\0020 \0020 \0020 \00BB \0020";
}
#wrap .header {
  background-color: #fcfcfc;
  border-bottom: 4px solid #cccccc;
  overflow:hidden;
}
#wrap .footer {
  width: 960px;
  position: fixed;
  bottom: 0;
  left: 50%;
  margin-left: -480px;
}
#wrap .footer p {
  text-transform: uppercase;
  color: #999999;
  background-color: #fcfcfc;
  border-top: 4px solid #cccccc;
}
#wrap .content {
  padding-left: 18px;
  overflow:hidden;
}
#wrap .content .login, #wrap .content .register {
  text-align: center;
  width: 320px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -160px;
}
#wrap .content .login a, #wrap .content .register a {
  background: none;
  display: block;
  margin: 0 0 14px;
}
#wrap .content .login {
  min-height: 256px;
  margin-top: -128px;
}
#wrap .content .register {
  min-height: 350px;
  margin-top: -175px;
}
#wrap .pins{
  float:left;
}
#wrap .filters{
  float:right;
  margin-right:15px;
  width:22%
}
.pins{width:75%;}
#wrap .pin {
}
#wrap form .error {
  color: red;
}
#wrap form input[type="text"], #wrap form input[type="password"], #wrap form input[type="email"] {
  border: 0;
  text-align: center;
  margin: 14px 0 0;
  -moz-box-shadow: inset 0 1px 2px #cccccc;
  -webkit-box-shadow: inset 0 1px 2px #cccccc;
  -o-box-shadow: inset 0 1px 2px #cccccc;
  box-shadow: inset 0 1px 2px #cccccc;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -o-border-radius: 4px;
  -ms-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
  background-color: #fcffe8;
}
#wrap form input[type="text"]:focus, #wrap form input[type="password"]:focus, #wrap form input[type="email"]:focus {
  background-color: #fcfcfc;
}
#wrap form input[type="submit"], #wrap .button {
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -o-border-radius: 4px;
  -ms-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
  cursor: pointer;
  display: block;
  width: 160px;
  border: 0;
  text-align: center;
  background-color: #222222;
  margin-top: 14px;
  margin-bottom: 14px;
  color: #f7f7f7;
}
#wrap form input[type="submit"]:hover, #wrap .button:hover {
  background-color: #3c3c3c;
}
.module .tag{
  padding:4px;
  margin:2px;
}
.module .tag.selected{
  background:#0090ff;
  padding:4px;
  margin:2px;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -o-border-radius: 4px;
  -ms-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
  color: #fcfcfc;
}
.module-footer div.tags{
  clear:both;
  margin-top:3px;
  border-top:2px solid #ccc;
  padding-top:3px;
}
#wrap .module-footer div.tags form.module .form .msg {
  padding: 3px;
  margin:3px 35%;
}
.success {
  border: 1px solid #690;
  color: #690;
}
.error {
  border: 1px solid #770000;
  color: #770000;
}
#wrap .module-footer .module input, #wrap .module-footer .module .button {
  margin:3px 35%;
}
#wrap .module-footer .module input[type="submit"] {
  margin-left:38%;
}
.hidden{display:none}

